resource library now it is similer

--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AgriLearnNetwork</title>
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/b08b6de27e.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
   </head>
@@ -30,11 +46,19 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+        <a href="#home" class="active"
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
-        <a href="#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-        <a href="#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+        <a href="blogpage.html" target="_self"
+          ><i class="fa-solid fa-blog"></i> Blogs</a
+        >
+        <a href="#Resource Library"
+          ><i class="fa-solid fa-book"></i> Resource Library</a
+        >
+        <a href="#contact" id="nav--contact"
+          ><i class="fa-solid fa-phone"></i> Contact</a
+        >
       </nav>
     </header>
 
@@ -271,52 +295,63 @@
           <input type="text" placeholder="Email Subject" required />
         </div>
 
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
-        <input type="submit" class="btn" id="contact-btn"><br>
-        </form>
-        <div class="button-container">
-          <button id="review-btn">Give feedback</button>
-        </div>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+          required
+        ></textarea>
+        <input type="submit" class="btn" id="contact-btn" /><br />
+      </form>
+      <div class="button-container">
+        <button id="review-btn">Give feedback</button>
+      </div>
     </section>
 
     <!-- Modal -->
-<div id="modal" class="modal">
-  <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>FEEDBACK FORM</h2>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <form id="feedback-form">
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>FEEDBACK FORM</h2>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
+        <form id="feedback-form">
           <div class="form-group">
-              <div class="icon">
-                  <i class="fas fa-user"></i>
-              </div>
-              <input type="text" placeholder="Your Name" name="name" required>
+            <div class="icon">
+              <i class="fas fa-user"></i>
+            </div>
+            <input type="text" placeholder="Your Name" name="name" required />
           </div>
           <div class="form-group">
-              <div class="icon">
-                  <i class="fas fa-envelope"></i>
-              </div>
-              <input type="email" placeholder="Email Id" required>
+            <div class="icon">
+              <i class="fas fa-envelope"></i>
+            </div>
+            <input type="email" placeholder="Email Id" required />
           </div>
           <div class="form-group">
-              <textarea cols="30" rows="5" placeholder="Your Feedback" required></textarea>
+            <textarea
+              cols="30"
+              rows="5"
+              placeholder="Your Feedback"
+              required
+            ></textarea>
           </div>
           <div class="rating">
-              <h2>Rate us:</h2>
-              <i class="rating__star far fa-star"></i>
-              <i class="rating__star far fa-star"></i>
-              <i class="rating__star far fa-star"></i>
-              <i class="rating__star far fa-star"></i>
-              <i class="rating__star far fa-star"></i>
-
+            <h2>Rate us:</h2>
+            <i class="rating__star far fa-star"></i>
+            <i class="rating__star far fa-star"></i>
+            <i class="rating__star far fa-star"></i>
+            <i class="rating__star far fa-star"></i>
+            <i class="rating__star far fa-star"></i>
           </div>
           <button type="submit">Submit</button>
-      </form>
-  </div>
-</div>
-
-
-      
+        </form>
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="footer-grid">
@@ -378,7 +413,7 @@
         </p>
       </div>
     </footer>
-    <div  id="backtoTop">
+    <div id="backtoTop">
       <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
 
@@ -392,17 +427,17 @@
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 
     <script>
+      window.addEventListener("scroll", function () {
+        var scrollPosition = window.scrollY;
+        var backToTopButton = document.getElementById("backtoTop");
 
-      window.addEventListener('scroll', function() {
-  var scrollPosition = window.scrollY;
-  var backToTopButton = document.getElementById('backtoTop');
-
-  if (scrollPosition > 300) { // Adjust this value as needed to show the button at the desired scroll position
-    backToTopButton.style.display = 'block';
-  } else {
-    backToTopButton.style.display = 'none';
-  }
-});
+        if (scrollPosition > 300) {
+          // Adjust this value as needed to show the button at the desired scroll position
+          backToTopButton.style.display = "block";
+        } else {
+          backToTopButton.style.display = "none";
+        }
+      });
 
       document.addEventListener("DOMContentLoaded", function () {
         const slideGroup = document.querySelector(".slide_group");
@@ -464,32 +499,31 @@
     </script>
 
     <script type="text/javascript">
-      window.addEventListener("scroll", function(){
-        var header= document.querySelector("header");
-        header.classList.toggle("sticky", window.scrollY >10)
-      })
+      window.addEventListener("scroll", function () {
+        var header = document.querySelector("header");
+        header.classList.toggle("sticky", window.scrollY > 10);
+      });
     </script>
-<script>
-  const { animate } = window.framerMotion;
+    <script>
+      const { animate } = window.framerMotion;
 
-  function smoothScroll(target) {
-    const element = document.querySelector(target);
-    const offsetTop = element.offsetTop;
+      function smoothScroll(target) {
+        const element = document.querySelector(target);
+        const offsetTop = element.offsetTop;
 
-    animate.scrollTop(document.documentElement, {
-      to: offsetTop,
-      duration: 1.5, // Duration in seconds
-      ease: "easeInOut",
-    });
-  }
+        animate.scrollTop(document.documentElement, {
+          to: offsetTop,
+          duration: 1.5, // Duration in seconds
+          ease: "easeInOut",
+        });
+      }
 
-  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-      e.preventDefault();
-      smoothScroll(this.getAttribute('href'));
-    });
-  });
-</script>  
-
-</body>
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          smoothScroll(this.getAttribute("href"));
+        });
+      });
+    </script>
+  </body>
 </html>
