Replaced the old Contact Us page with a new and improved version.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <img src="images/contactForm_img.jpg" alt="Contact Image">
       </div>
       <div class="contact-form">
-          <h2>Contact Us</h2>
+          <h2><b>Contact Us!</b></h2>
           <form>
             <div class="input-group">
                 <input type="text" id="first-name" name="first-name" required placeholder="First Name">
@@ -300,7 +300,6 @@
             
             <div class="buttons">
                 <button type="submit">Submit</button>
-                <button type="button">Feedback</button>
             </div>
         </form>
       </div>
