--- a/faqs.html
+++ b/faqs.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="./style.css"/>
+        <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     </head>
 <body>
     <div class="agri-learn-faq-button-container">
@@ -90,5 +94,68 @@
 </div>  
 </div>
    </section>
+   <footer class="footer">
+    <div class="footer-grid">
+      <div class="footer-title">
+        <h2>AgriLearnNetwork</h2>
+      </div>
+      <div class="footer-icons">
+        <p><b>Follow us on our socials:</b></p>
+        <div class="socialIcons">
+          <a
+            href="mailto:AgriLearnNetwork@gmail.com"
+            class="email-link"
+            data-tooltip="AgriLearnNetwork@gmail.com"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/your_username_here"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/your_username_here" target="_blank"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/your_page_or_profile_here"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <div class="quick-links">
+      <h2>Quick Links</h2>
+      <ul>
+        <li>
+          <a href="#home"><p>Home</p></a>
+        </li>
+        <li>
+          <a href="#about"><p>About Us</p></a>
+        </li>
+        <li>
+          <a href="blogpage.html"><p>Blogs</p></a>
+        </li>
+        <li>
+          <a href="#Resource Library"><p>Resource Library</p></a>
+        </li>
+        <li>
+          <a href="#contact"><p>Contact Us</p></a>
+        </li>
+        <li>
+          <a href="faqs.html"><p>FAQ's</p></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-text footer-right">
+      <p style="font-weight: 600; font-size: 15px">
+        Copyright &copy;
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        by AgriLearnNetwork | All Rights Reserved.
+      </p>
+    </div>
+  </footer>
    <script src="./script.js"></script>
 </body>
