changed to the correct year

--- a/blogpage.html
+++ b/blogpage.html
@@ -51,7 +51,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -66,7 +66,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -80,7 +80,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -95,7 +95,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -110,7 +110,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -126,7 +126,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -142,7 +142,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -158,7 +158,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -174,7 +174,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -190,7 +190,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
@@ -207,7 +207,7 @@
           <div class="day">
             <ul>
           <li class="date"><p class="tim">April 19, 2022</p> </li>
-           <li class="time"><p class="tim">11 minutes ago</p></li>
+           <li class="time"><p class="tim">2 years ago</p></li>
           </ul>
           </div>
          
@@ -225,7 +225,7 @@
           <div class="day">
             <ul>
               <li class="date"><p class="tim">April 19, 2022</p> </li>
-               <li class="time"><p class="tim">11 minutes ago</p></li>
+               <li class="time"><p class="tim">2 years ago</p></li>
               </ul>
             </div>
         </div>    
