Added login/registration feature

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img
         src="images/favicon.png"
         alt="logo"
-        style="height: 50px; width: 50px; margin-right: 10px"
+        style="height: 50px; width: 50px; margin-right: 10px;"
       />
       <a href="#" class="logo" style="margin-inline-end: auto"
         ><h3>AgriLearnNetwork</h3>
@@ -68,6 +68,9 @@
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
+        <a href="login.html">
+          <button id="log-in-btn" class="login-btn">Login</button>
+        </a>
       </nav>
     </header>
 
