--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
   </head>
-
   <body>
     <div id="loader-wrapper">
       <div id="loader"></div>
@@ -55,8 +54,8 @@
           ><i class="fa-solid fa-house"></i> Home</a
         >
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
-        <a href="blogpage.html" target="_self"
-          ><i class="fa-solid fa-blog"></i> Blogs</a
+        <a href="blogpage.html" target="_self">
+          <i class="fa-solid fa-blog"></i> Blogs</a
         >
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
@@ -300,19 +299,12 @@
           <input type="text" placeholder="Email Subject" required />
         </div>
 
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-          required
-        ></textarea>
-        <input type="submit" class="btn" id="contact-btn" /><br />
-      </form>
-      <div class="button-container">
-        <button id="review-btn">Give feedback</button>
-      </div>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <input type="submit" class="btn" id="contact-btn"><br>
+        </form>
+        <div class="button-container">
+          <button id="review-btn">Give feedback</button>
+        </div>
     </section>
 
     <!-- Modal -->
@@ -321,45 +313,22 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>FEEDBACK FORM</h2>
-
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry.
-        </p>
-
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-
         <form id="feedback-form">
           <div class="form-group">
             <div class="icon">
               <i class="fas fa-user"></i>
             </div>
-
-            <input type="text" placeholder="Your Name" name="name" required />
-
             <input type="text" placeholder="Your Name" name="name" required>
-
           </div>
           <div class="form-group">
             <div class="icon">
               <i class="fas fa-envelope"></i>
             </div>
-
-            <input type="email" placeholder="Email Id" required />
-          </div>
-          <div class="form-group">
-            <textarea
-              cols="30"
-              rows="5"
-              placeholder="Your Feedback"
-              required
-            ></textarea>
-
             <input type="email" placeholder="Email Id" required>
           </div>
           <div class="form-group">
             <textarea cols="30" rows="5" placeholder="Your Feedback" required></textarea>
-
           </div>
           <div class="rating">
             <h2>Rate us:</h2>
@@ -371,11 +340,6 @@
           </div>
           <button type="submit">Submit</button>
         </form>
-
-      </div>
-    </div>
-
-
         <div id="thank-you-message" style="display:none; font-size:20px; color: green; margin-top: 20px;">
           Thank you for your feedback!
         </div>
@@ -385,7 +349,6 @@
       </div>
     </div>
     
-
     <footer class="footer">
       <div class="footer-grid">
         <div class="footer-title">
@@ -446,7 +409,7 @@
         </p>
       </div>
     </footer>
-    <div id="backtoTop">
+    <div  id="backtoTop">
       <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
 
@@ -460,17 +423,17 @@
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 
     <script>
-      window.addEventListener("scroll", function () {
-        var scrollPosition = window.scrollY;
-        var backToTopButton = document.getElementById("backtoTop");
 
-        if (scrollPosition > 300) {
-          // Adjust this value as needed to show the button at the desired scroll position
-          backToTopButton.style.display = "block";
-        } else {
-          backToTopButton.style.display = "none";
-        }
-      });
+      window.addEventListener('scroll', function() {
+  var scrollPosition = window.scrollY;
+  var backToTopButton = document.getElementById('backtoTop');
+
+  if (scrollPosition > 300) { // Adjust this value as needed to show the button at the desired scroll position
+    backToTopButton.style.display = 'block';
+  } else {
+    backToTopButton.style.display = 'none';
+  }
+});
 
       document.addEventListener("DOMContentLoaded", function () {
         const slideGroup = document.querySelector(".slide_group");
@@ -532,31 +495,12 @@
     </script>
 
     <script type="text/javascript">
-      window.addEventListener("scroll", function () {
-        var header = document.querySelector("header");
-        header.classList.toggle("sticky", window.scrollY > 10);
-      });
-    </script>
-    <script>
-      const { animate } = window.framerMotion;
-
-      function smoothScroll(target) {
-        const element = document.querySelector(target);
-        const offsetTop = element.offsetTop;
-
-        animate.scrollTop(document.documentElement, {
-          to: offsetTop,
-          duration: 1.5, // Duration in seconds
-          ease: "easeInOut",
-        });
-      }
-
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-          smoothScroll(this.getAttribute("href"));
-        });
-      });
+      window.addEventListener("scroll", function(){
+        var header= document.querySelector("header");
+        header.classList.toggle("sticky", window.scrollY >10)
+      })
     </script>
   </body>
-</html>
+
+
+  </html>
