--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
         <a href="blogpage.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
+        
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
+        <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
