--- a/blogpage.html
+++ b/blogpage.html
@@ -41,6 +41,9 @@
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
+        <a href="login.html">
+          <button id="log-in-btn" class="login-btn">Login</button>
+        </a>
       </nav>
       <script type="text/javascript">
         window.addEventListener("scroll", function(){
