Update login.html - Added return home button
Redirected to Home Page from login and register page using "Return Home" button.

--- a/login.html
+++ b/login.html
@@ -42,6 +42,8 @@
       </div>
       <button type="submit">Register</button>
     </form>
+    <br>
+    <a href="index.html"><button class="home-btn">Return Home</button></a>
   </div>
   <script src="login.js"></script>
 </body>
