--- a/blogpage.html
+++ b/blogpage.html
@@ -12,11 +12,11 @@
     <title>AgroBlogs</title>
 
     <header class="header">
-      <a href="index.html">
+      <!-- <a href="index.html">
         <span class="material-symbols-outlined arrow" style="font-size: 36px;">
             arrow_back
         </span>
-    </a>
+    </a> -->
       <img
         src="images/favicon.png"
         alt="logo"
