--- a/blogpage.html
+++ b/blogpage.html
@@ -260,26 +260,29 @@
             ></a>
           </div>
         </div>
+      </div>
       <div class="quick-links">
-        <h2>Quick Links</h2>
+      <h2>Quick Links</h2>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html"><p>Home</p></a>
           </li>
           <li>
-            <a href="blogpage.html">Blogs</a>
+            <a href="#about"><p>About Us</p></a>
           </li>
           <li>
-            <a href="#">Add Blogs</a>
+            <a href="blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
-            <a href="#">Contact Us</a>
+            <a href="#Resource Library"><p>Resource Library</p></a>
+          </li>
+          <li>
+            <a href="#contact"><p>Contact Us</p></a>
           </li>
         </ul>
       </div>
-      </div>
       <div class="footer-text footer-right">
-        <p> Copyright &copy;
+        <p style="font-weight: 600; font-size: 15px"> Copyright &copy;
           <script>
             document.write(new Date().getFullYear());
           </script>
