--- a/blogpage.html
+++ b/blogpage.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="images/favicon.png"  type="image/png"/>
+ 
+    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" href="blogpagestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/fb940be696.js" crossorigin="anonymous"></script>
