Updated blogpage.html and login.html

--- a/blogpage.html
+++ b/blogpage.html
@@ -20,11 +20,11 @@
         </a>
       </div> 
       <div class="navtitle">
-        <img src="favicon_new.png" alt="Favicon" class="favicon-img">
+        <img src="favicon_new.png" alt="Favicon" class="favicon-img">       <!--Favicon-->
         <h2>Agro<span>Blogs</span></h2>
       </div>
     </div>
-    
+
     <section class="farm">
         <br>
         <br>
