--- a/login.html
+++ b/login.html
@@ -7,12 +7,11 @@
   <link rel="stylesheet" href="login.css">
   <link rel="icon" href="favicon_new.png" type="image/png">
 </head>
-
-<!--Navbar-->
+<!--Navbar & Favicon -->
 <body>
   <div class="heading">
     <div class="navtitle">
-      <img src="favicon_new.png" alt="Favicon" class="favicon-img">
+      <img src="favicon_new.png" alt="Favicon" class="favicon-img"> 
       <h2>AgriLearnNetwork</h2>
     </div>
   </div>
