--- a/buy-product.html
+++ b/buy-product.html
@@ -35,14 +35,96 @@
           >
         </nav>
       </header>
-  
-      <div class="box">
 
+      <!--Carousal-->
+      <div class="slider">
+        <div class="home-content">
+        
+        </div>
+        <div class="slide_viewer">
+          <div class="slide_group">
+            <div
+              class="slide"
+              style="background-image: url(./images/carousel-img-2.jpg)"
+            ></div>
+            <div
+              class="slide"
+              style="background-image: url(./images/carousel-img-1.jpg)"
+            ></div>
+            <div
+              class="slide"
+              style="background-image: url(./images/carousel-img-3.jpg)"
+            ></div>
+            <div
+              class="slide"
+              style="background-image: url(./images/carousel-img-4.jpg)"
+            ></div>
+          </div>
+        </div>
+      </div>
+
+     <!--Categories-->
+     <h1 class="heading">Categories</h1>
+      <div class="container">
+        <div class="category">
+          <img class="img1" src="./images/Herbicides.png" alt="">
+          <h3>Herbicides</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/growth promoter1.png" alt="">
+          <h3>Growth Promoter</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/fungicides1.png" alt="">
+          <h3>Fungicides</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/viricides.png" alt="">
+          <h3>Viricides</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/farm machines.png" alt="">
+          <h3>Farm Machinery</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/nutrients.png" alt="">
+          <h3>Nutrients</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/seeds1.png" alt="">
+          <h3>Seeds</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/insecticide2.jpg.png" alt="">
+          <h3>Insecticides</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/organic farming.png" alt="">
+          <h3>Organic Farming</h3>
+        </div>
+
+        <div class="category">
+          <img class="img1" src="./images/animal husbendry.png" alt="">
+          <h3>Animal Husbandry</h3>
+        </div>
+      </div>
+      
+      <!--Products-->
+      <h1 class="heading">Herbicides</h1>
+      <div class="box">
       <div class="card">
-        <img src="./images/insecticide1.jpg"/>
+        <img src="./images/Herbicide1.png"/>
         <div class="desciption">
-        <h1>Amsac</h1>
-        <p>Insecticide</p>
+        <h1>Roundup</h1>
+        <p>Herbicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
         <option>500 ml</option>
@@ -57,10 +139,10 @@
       </div>
 
       <div class="card">
-        <img src="./images/fertilizer.jpg"/>
+        <img src="./images/Herbicide2.png"/>
         <div class="desciption">
-        <h1>Organic Fertilizer</h1>
-        <p>Fertilizer</p>
+        <h1>Glycel</h1>
+        <p>Herbicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
         <option>500 gm</option>
@@ -76,14 +158,314 @@
 
 
       <div class="card">
-        <img src="./images/pashu ahar.jpg"/>
+        <img src="./images/Herbicide3.png"/>
         <div class="desciption">
-        <h1>Pashu Ahar</h1>
-        <p>Pashu</p>
+        <h1>Ferio Herbicide</h1>
+        <p>Herbicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+      </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/Herbicide4.png"/>
+        <div class="desciption">
+        <h1>Kabuto Herbicide</h1>
+        <p>Herbicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/Herbicide5.png"/>
+        <div class="desciption">
+        <h1>Agil Herbicide</h1>
+        <p>Herbicide5</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/Herbicide6.png"/>
+        <div class="desciption">
+        <h1>Hijack</h1>
+        <p>Herbicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/Herbicide7.png"/>
+        <div class="desciption">
+        <h1>Terga Super</h1>
+        <p>Herbicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/Herbicide8.png"/>
+        <div class="desciption">
+        <h1>Ozon</h1>
+        <p>Herbicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      </div>
+
+
+      <h1 class="heading">Growth Promoters</h1>
+      <div class="box">
+      <div class="card">
+        <img src="./images/grow1.png"/>
+        <div class="desciption">
+        <h1>Isabion</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+     <button class="btn" id="contact-btn">Buy Now</button>
+        <button class="btn" id="contact-btn">Add to cart</button>
+      </div>
+      </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow2.png"/>
+        <div class="desciption">
+        <h1>Planofix</h1>
+        <p>Growth Promoter</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
         <option>500 gm</option>
+        <option>1kg</option>
+        <option>2kg</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+      </div>
+      </div>
+
+
+      <div class="card">
+        <img src="./images/grow3.png"/>
+        <div class="desciption">
+        <h1>Culter</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+      </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow4.png"/>
+        <div class="desciption">
+        <h1>Raallis Bahaar</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow5.png"/>
+        <div class="desciption">
+        <h1>Crop Max</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow6.png"/>
+        <div class="desciption">
+        <h1>Amino Flower</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow7.png"/>
+        <div class="desciption">
+        <h1>V-Hume</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/grow8.png"/>
+        <div class="desciption">
+        <h1>Ethrel</h1>
+        <p>Growth Promoter</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 ml</option>
+        <option>1L</option>
+        <option>2L</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      </div>
+
+
+      <h1 class="heading">Fungicides</h1>
+      <div class="box">
+      <div class="card">
+        <img src="./images/fungicide1.png"/>
+        <div class="desciption">
+        <h1>Saaf</h1>
+        <p>Fungicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500gm</option>
         <option>1Kg</option>
+        <option>2Kg</option>
+      </select><br><br>
+      <div class="button">
+     <button class="btn" id="contact-btn">Buy Now</button>
+        <button class="btn" id="contact-btn">Add to cart</button>
+      </div>
+      </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/fungicide2.png"/>
+        <div class="desciption">
+        <h1>Bavistin</h1>
+        <p>Fungicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 gm</option>
+        <option>1kg</option>
+        <option>2kg</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+      </div>
+      </div>
+
+
+      <div class="card">
+        <img src="./images/fungicide3.png"/>
+        <div class="desciption">
+        <h1>Ridomil Gold</h1>
+        <p>Fungicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500gm</option>
+        <option>1kg</option>
         <option>2kg</option>
       </select><br><br>
       <div class="button">
@@ -94,33 +476,15 @@
       </div>
 
       <div class="card">
-        <img src="./images/urea.jpg"/>
+        <img src="./images/fungicide4.png"/>
         <div class="desciption">
-        <h1>Urea</h1>
-        <p>Nutritions</p>
-        <h2>Rs. 250/-</h2>
-        Size:<select>
-        <option>500 gm</option>
-        <option>1Kg</option>
-        <option>2Kg</option>
-      </select><br><br>
-      <div class="button">
-        <button class="btn" id="contact-btn">Buy Now</button>
-           <button class="btn" id="contact-btn">Add to cart</button>
-         </div>
-     </div>
-      </div>
-
-      <div class="card">
-        <img src="./images/fungicides.png"/>
-        <div class="desciption">
-        <h1>Saaf</h1>
+        <h1>Antracol</h1>
         <p>Fungicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
-        <option>500 ml</option>
-        <option>1L</option>
-        <option>2L</option>
+        <option>500gm</option>
+        <option>1Kg</option>
+        <option>2kg</option>
       </select><br><br>
       <div class="button">
         <button class="btn" id="contact-btn">Buy Now</button>
@@ -130,10 +494,10 @@
       </div>
 
       <div class="card">
-        <img src="./images/seeds.png"/>
+        <img src="./images/fungicide5.png"/>
         <div class="desciption">
-        <h1>Tomato Seeds</h1>
-        <p>Seeds</p>
+        <h1>Navito</h1>
+        <p>Fungicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
         <option>500 gm</option>
@@ -148,15 +512,15 @@
       </div>
 
       <div class="card">
-        <img src="./images/neem.png"/>
+        <img src="./images/fungicide6.png"/>
         <div class="desciption">
-        <h1>Neem 1500</h1>
-        <p>Fertilizer</p>
+        <h1>Roko</h1>
+        <p>Fungicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
-        <option>500 ml</option>
-        <option>1L</option>
-        <option>2L</option>
+        <option>500 gm</option>
+        <option>1Kg</option>
+        <option>2Kg</option>
       </select><br><br>
       <div class="button">
         <button class="btn" id="contact-btn">Buy Now</button>
@@ -166,15 +530,33 @@
       </div>
 
       <div class="card">
-        <img src="./images/growth promoter.png"/>
+        <img src="./images/fungicide7.png"/>
         <div class="desciption">
-        <h1>Isabion</h1>
-        <p>Fertilizer</p>
+        <h1>Sixer</h1>
+        <p>Fungicide</p>
         <h2>Rs. 250/-</h2>
         Size:<select>
-        <option>500 ml</option>
-        <option>1L</option>
-        <option>2L</option>
+        <option>500 gm</option>
+        <option>1kg</option>
+        <option>2kg</option>
+      </select><br><br>
+      <div class="button">
+        <button class="btn" id="contact-btn">Buy Now</button>
+           <button class="btn" id="contact-btn">Add to cart</button>
+         </div>
+     </div>
+      </div>
+
+      <div class="card">
+        <img src="./images/fungicide8.png"/>
+        <div class="desciption">
+        <h1>Kpcide</h1>
+        <p>Fungicide</p>
+        <h2>Rs. 250/-</h2>
+        Size:<select>
+        <option>500 gm</option>
+        <option>1kg</option>
+        <option>2kg</option>
       </select><br><br>
       <div class="button">
         <button class="btn" id="contact-btn">Buy Now</button>
@@ -184,6 +566,9 @@
       </div>
 
       </div>
+
+
+
 
 
       <footer class="footer">
@@ -252,5 +637,6 @@
   
 
       <script src="script.js"></script>
+      <script src="buy-product.js"></script>
 </body>
 </html>
