Added the hover effect while changing the dimensions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 </head>
 
 <body>
+
+
+  <nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
   
   <header class="header">
     <img src="images/favicon.png" alt="logo" style="height:50px; width:50px; margin-right:10px;" >
