Update login.html - Adding header and footer to page
Login issue resolved

--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
-  <header class="header">
+  <header class="header sticky">
     <img
       src="images/favicon.png"
       alt="logo"
