bug fixed on navigation in blog page

--- a/blogpage.html
+++ b/blogpage.html
@@ -28,17 +28,17 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" 
+        <a href="index.html#home" 
           ><i class="fa-solid fa-house"></i> Home</a
         >
-        <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
+        <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
         <a href="blogpage.html" class="active">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
-        <a href="#Resource Library"
+        <a href="index.html#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
-        <a href="#contact" id="nav--contact"
+        <a href="index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
         <a href="login.html">
