--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img
         src="images/favicon.png"
         alt="logo"
-        style="height: 50px; width: 50px; margin-right: 10px;"
+        style="height: 50px; width: 50px; margin-right: 10px"
       />
       <a href="#" class="logo" style="margin-inline-end: auto"
         ><h3>AgriLearnNetwork</h3>
@@ -63,9 +63,6 @@
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
-        <a href="login.html">
-          <button id="log-in-btn" class="login-btn">Login</button>
-        </a>
       </nav>
     </header>
 
@@ -207,7 +204,7 @@
         </div>
 
         <div class="portfolio-box">
-          <h4 class="portfolio-heading">Crop care & maintenance</h4>
+          <h4 class="portfolio-heading">Crop care & maintainance</h4>
           <img src="images/insects-on-a-field.jpg" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
