Added_Expert_section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <a href="blogpage.html" target="_self">
           <i class="fa-solid fa-blog"></i> Blogs</a
         >
+        <a href="Expert.html" target="_self">
+          <i class="fa-solid fa-user"></i> Experts
+        </a>
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
