--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to AgriLearnNetwork</title>
   <link rel="stylesheet" href="login.css">
+  <link rel="icon" href="favicon_new.png" type="image/x-icon" />
 </head>
 <body>
   <div class="wrapper">
