--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link
       rel="stylesheet"
@@ -45,7 +45,7 @@
   </div>
     <header class="header">
       <img
-        src="images/favicon.png"
+        src="favicon_new.png"
         alt="logo"
         style="height: 50px; width: 50px; margin-right: 10px;"
       />
