Revert "fix #694 : fixed the navbar tabs issue "

--- a/blogpage.html
+++ b/blogpage.html
@@ -11,27 +11,39 @@
    
     <title>AgroBlogs</title>
 
-    <header class="header" >
+    <header class="header">
       <!-- <a href="index.html">
         <span class="material-symbols-outlined arrow" style="font-size: 36px;">
             arrow_back
         </span>
     </a> -->
-      <img 
+      <img
         src="favicon_new.png"
         alt="logo"
-        style="height: 50px; width: 50px; margin-left:-5rem;margin-right: 1rem"
+        style="height: 50px; width: 50px; margin-right: 10px"
       />
-      <a href="#" class="logo" style="margin-left: -5rem;" ><h3>AgriLearnNetwork</h3></a>
+      <a href="#" class="logo" style="margin-inline-end: auto"
+        ><h3>AgriLearnNetwork</h3>
+      </a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
-      <nav class="navbar" style="display: flex;justify-content: center;">
-        <a href="index.html#home" ><i class="fa-solid fa-house" ></i> Home</a>
-        <a href="index.html#about"><i class="fa-solid fa-circle-info" ></i> About</a>
-        <a href="blogpage.html" class="active"><i class="fa-solid fa-blog" ></i> Blogs</a>
-        <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-        <a href="index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"  ></i> Contact</a>
-        <a href="login.html"><button id="log-in-btn" class="login-btn">Login</button></a>
+      <nav class="navbar">
+        <a href="index.html#home" 
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
+        <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
+        <a href="blogpage.html" class="active">
+          <i class="fa-solid fa-blog"></i> Blogs</a
+        >
+        <a href="index.html#Resource Library"
+          ><i class="fa-solid fa-book"></i> Resource Library</a
+        >
+        <a href="index.html#contact" id="nav--contact"
+          ><i class="fa-solid fa-phone"></i> Contact</a
+        >
+        <a href="login.html">
+          <button id="log-in-btn" class="login-btn">Login</button>
+        </a>
       </nav>
       <script type="text/javascript">
         window.addEventListener("scroll", function(){
