Fixed the issue

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </head>
 
   <body>
+    <div class="drop">
     <header class="header">
       <img
         src="images/favicon.png"
@@ -60,11 +61,16 @@
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
+        <a href="buy-product.html">
+          <i class="fa-solid fa-book"></i>Services</a
+        >
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
       </nav>
     </header>
+
+    
 
     <section class="home" id="home">
       <div class="slider">
@@ -284,8 +290,8 @@
       </div>
     </section>
     
-    <div class="buy-btn">
-    <button onclick="location.href='buy-product.html'" class="btn" id="contact-btn">Buy Products</button></div>
+    <!-- <div class="buy-btn">
+    <button onclick="location.href='buy-product.html'" class="btn" id="contact-btn">Buy Products</button></div> -->
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
