--- a/buy-product.html
+++ b/buy-product.html
@@ -6,6 +6,31 @@
     <title>Buy Products</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="buy-product.css"/>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/b08b6de27e.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7972082263222296"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <link rel="icon" href="./agriculture-icon-png-2804.png" type="'image/png"> -->
 </head>
 <body>
     <header class="header">
