navbar alignment and responsive

--- a/blogpage.html
+++ b/blogpage.html
@@ -50,7 +50,7 @@
       
         <nav class="navbar" style="margin-right: 80px;">
       
-          <a href="index.html#home" style="height: 1px;"><i class="fa-solid fa-house" style="column-gap: 0%;"></i> Home</a>
+          <a href="index.html#home" style="height: 1px;"><i class="fa-solid fa-house" ></i> Home</a>
           <a href="index.html#about" style="height: 1px;"><i class="fa-solid fa-circle-info"  style="column-gap: 0%;"></i> About</a>
           <a href="blogpage.html" class="active" target="_self" style="height: 1px;">
             <i class="fa-solid fa-blog"></i> Blogs</a>
