Revert "Increase the size of the Logo"

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <img
         src="favicon_new.png"
         alt="logo"
-        class="site-logo"
-        />
+        style="height: 50px; width: 50px; margin-right: 10px;"
+      />
       <a href="#" class="logo" style="margin-inline-end: auto"
         ><h3>AgriLearnNetwork</h3>
       </a>
